--- a/__fixtures__/index.html
+++ b/__fixtures__/index.html
@@ -6,11 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>RSS</title>
   </head>
   <body>
+    <!-- Modal -->
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">
+              Modal title
+            </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="closeButton" class="btn btn-secondary" data-dismiss="modal">
+              Close
+            </button>
+            <button type="button" id="readButton" class="btn btn-primary">
+              Read
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section class="container p-3 my-3 bg-dark text-white">
       <div class="col-md-10 col-lg-8" name="display">
         <h1>RSS aggregator</h1>
@@ -21,15 +49,17 @@
         <p class="text-muted my-1">
           Example: https://ru.hexlet.io/lessons.rss
         </p>
-        <p name='feedback'>
+        <p name="feedback">
         </p>
       </div>  
     </section>
-    <section class='container p-3 my-3'>
+    <section class="container p-3 my-3">
       <div class="col-md-10 col-lg-8" name="feeds">
       </div>
       <div class="col-md-10 col-lg-8" name="posts">
       </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
