index.html fixed; alert('Enter') removed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="col-md-10 col-lg-8" name="display">
         <h1>RSS aggregator</h1>
         <form class="form-inline">
-            <input type="text" required="required" class="form-control mr-3" placeholder="input RSS link" name="url">
+            <input required="required" class="form-control mr-3" placeholder="input RSS link" name="url">
             <input type="submit" class="btn btn-primary mr-3" value="Add">
         </form>
         <p class="text-muted my-1">
