--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -6,60 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>RSS</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- Modal -->
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">
-              Modal title
-            </h5>
+            <h5 class="modal-title" id="modalLabel">Modal title</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            ...
-          </div>
+          <div class="modal-body">Modal Body</div>
           <div class="modal-footer">
-            <button type="button" id="closeButton" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
-            <button type="button" id="readButton" class="btn btn-primary">
-              Read
-            </button>
+            <button id="closeModalButton" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button id="readModalButton" type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
     </div>
 
-    <section class="container p-3 my-3 bg-dark text-white">
-      <div class="col-md-10 col-lg-8" name="display">
-        <h1>RSS aggregator</h1>
-        <form class="form-inline">
-            <input required="required" class="form-control mr-3" placeholder="input RSS link" name="url">
-            <input type="submit" class="btn btn-primary mr-3" value="Add">
-        </form>
-        <p class="text-muted my-1">
-          Example: https://ru.hexlet.io/lessons.rss
-        </p>
-        <p name="feedback">
-        </p>
-      </div>  
-    </section>
-    <section class="container p-3 my-3">
-      <div class="col-md-10 col-lg-8" name="feeds">
-      </div>
-      <div class="col-md-10 col-lg-8" name="posts">
-      </div>
-    </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
+    <main class="flex-grow-1">
+      <section class="container-fluid bg-dark p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 mx-auto text-white">
+            <h1 class="display-3 mb-0">RSS агрегатор</h1>
+            <form action class="rss-form text-body">
+              <div class="row">
+                <div class="col">
+                  <div class="form-floating">
+                    <input id="url-input" autofocus aria-label="url" class="form-control w-100" placeholder="Введите ссылку RSS" name="url-input">
+                    <label for="url-input">Введите ссылку RSS</label>
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <button id="addButton" type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+                </div>
+              </div>
+            </form>
+            <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+            <p class="feedback m-0" ></p>
+          </div>  
+        </div>
+      </section>
+      <section class="container-fluid container-xxl p-5">
+        <div class="row">
+          <div id="feeds" class="col-md-10 col-lg-8 mx-auto"></div>
+          <div id="posts" class="col-md-10 col-lg-8 mx-auto"></div>
+        </div>
+      </section>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    </body>
+  </main>
 </html>
