--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           </div>
           <div class="modal-body">Modal Body</div>
           <div class="modal-footer">
+            <a id="readModalButton" href="#" role="button" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Save changes</a>
             <button id="closeModalButton" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button id="readModalButton" type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
             <h1 class="display-3 mb-0">RSS агрегатор</h1>
-            <form action class="rss-form text-body">
+            <form class="rss-form text-body">
               <div class="row">
                 <div class="col">
                   <div class="form-floating">
@@ -61,6 +61,6 @@
       </section>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    </body>
-  </main>
+    </main>
+  </body>
 </html>
